# Arm-2D

./: .gitignore  .gitmodules  ARM.Arm-2D.pdsc  Arm.Arm-2D.pdsc  CMakeLists.txt  README.md  ReleaseNote.md  gen_pack.sh  latest  update_versions.sh  version.js
.github/: dependabot.yml
Acceleration/: README.md
CDE/: arm_2d_rgb565_aci_lib.c  arm_2d_user_aci.h
Doxygen/: 2d.dxy.in  gen_doc.sh
cmsis-pack/: Arm.Arm-2D.1.0.0-preview-beta7.pack  Arm.Arm-2D.1.0.0-preview-beta8.pack  Arm.Arm-2D.1.0.0-preview-beta9.pack  Arm.Arm-2D.pdsc  Arm.pidx
csolution/: arm2d.csolution.yml  boot.clayer.yml  cde.clayer.yml  cdefault.yml  printf_mpsx.clayer.yml
developing/: ____arm__2d__fill__colour__with__alpha__gradient_8h_source.html  ____arm__2d__fill__colour__with__horizontal__line__mask_8h_source.html  ____arm__2d__fill__colour__with__mask__and__mirroring_8h_source.html  ____arm__2d__fill__colour__with__vertical__line__mask_8h_source.html  ____arm__2d__filter__iir__blur_8h_source.html  ____arm__2d__tile__copy__with__source__mask__and__opacity_8h_source.html  annotated.html  arm__2d_8h_source.html  arm__2d__alpha__blending_8h_source.html  arm__2d__conversion_8h_source.html  arm__2d__draw_8h_source.html  arm__2d__features_8h_source.html  arm__2d__filter_8h_source.html  arm__2d__helper_8h_source.html  arm__2d__helper__control_8h_source.html  arm__2d__helper__font_8h_source.html  arm__2d__helper__list_8h_source.html  arm__2d__helper__pfb_8h_source.html  arm__2d__helper__scene_8h_source.html  arm__2d__helper__shape_8h_source.html  arm__2d__op_8h_source.html  arm__2d__tile_8h_source.html  arm__2d__transform_8h_source.html  arm__2d__types_8h_source.html  arm__2d__utils_8h_source.html  classes.html  deploy.html  deprecated.html  dir_5ad7f572bbca03234e8e621e192fc099.html  dir_9be8e59d87575d36fe0b34c31988a08d.html  dir_b26faa4f0634c2b4c15a4cd1ba45f3c2.html  examples.html  files.html  footer.js  functions.html  functions_func.html  functions_vars.html  group__Deprecated.html  group__Drawing.html  group__Drawing.js  (+52 more)
documentation/: arm2d.dxy  arm2d.dxy.in  contribution.md  gen_doc.sh  getting started as an application designer.md  getting_started_as_a_gui_stack_developer.md  getting_started_as_a_professional_user.md  getting_started_as_an_application_designer.md  how_to_accelerate_arm_2d.md  how_to_deploy_the_arm_2d_library.md  how_to_use_layout_assistant.md  how_to_use_tile_operations.md  introduction.md  version.css  version.js
documents/: Doxyfile  Introduction.md  how_to_use_tile_operations.md
examples/: README.md
main/: ____arm__2d__fill__colour__with__mask__and__mirroring_8h_source.html  ____arm__2d__fill__colour__with__vertical__line__mask_8h_source.html  ____arm__2d__filter__iir__blur_8h_source.html  ____arm__2d__tile__copy__with__source__mask__and__opacity_8h_source.html  annotated.html  arm__2d_8h_source.html  arm__2d__alpha__blending_8h_source.html  arm__2d__conversion_8h_source.html  arm__2d__draw_8h_source.html  arm__2d__features_8h_source.html  arm__2d__filter_8h_source.html  arm__2d__helper_8h_source.html  arm__2d__helper__control_8h_source.html  arm__2d__helper__font_8h_source.html  arm__2d__helper__list_8h_source.html  arm__2d__helper__pfb_8h_source.html  arm__2d__helper__scene_8h_source.html  arm__2d__helper__shape_8h_source.html  arm__2d__op_8h_source.html  arm__2d__tile_8h_source.html  arm__2d__transform_8h_source.html  arm__2d__types_8h_source.html  arm__2d__utils_8h_source.html  classes.html  deploy.html  dir_5ad7f572bbca03234e8e621e192fc099.html  dir_85673a067e0292aba8a2951c7d9ddcb5.html  dir_9be8e59d87575d36fe0b34c31988a08d.html  dir_b26faa4f0634c2b4c15a4cd1ba45f3c2.html  enumerate-example.html  files.html  footer.js  functions.html  functions_func.html  functions_vars.html  group__Deprecated.html  group__Deprecated.js  group__Drawing.html  group__Drawing.js  group__Tile.html  (+124 more)
test/: README.md  arm2d.csolution.yml  arm2d.csolution_ac6.yml  arm2d.csolution_gcc.yml  arm2d.gcc-cdefault.yml  arm2d_generic.Release+MPS3-Corstone-300.cprj  arm2d_generic.Release+VHT-Corstone-300.cprj  arm2d_generic.Release+VHT-Corstone-310.cprj  arm2d_generic.cproject.yml  arm2d_smartwatch.Release+MPS3-Corstone-300.cprj  arm2d_smartwatch.Release+VHT-Corstone-300.cprj  arm2d_smartwatch.Release+VHT-Corstone-310.cprj  arm2d_smartwatch.cproject.yml  avh.yml  boot.clayer.yml  build.py  main.c  printf_mps3.clayer.yml  requirements.txt
tools/: README.md  arial_ascii_font14.c  img2c.py  jinja2c.py  star.c  ttf2c.py
v1.0.0-preview/: arm__2d_8h_source.html  arm__2d__conversion_8h_source.html  arm__2d__draw_8h_source.html  arm__2d__features_8h_source.html  arm__2d__helper__pfb_8h_source.html  arm__2d__op_8h_source.html  arm__2d__tile_8h_source.html  arm__2d__types_8h_source.html  classes.html  deploy.html  dir_85673a067e0292aba8a2951c7d9ddcb5.html  dir_9be8e59d87575d36fe0b34c31988a08d.html  footer.js  functions_func.html  functions_vars.html  group__Drawing.html  group__Tile.html  group__gConversion.html  group__gConversion.js  group__gKernel.html  index.html  modules.html  navtreeindex0.js  struct____arm__2d__op__info__t_8Info.html  struct____arm__2d__op__info__t_8Info_8LowLevelIO_8____unnamed40____.html  struct____arm__2d__op__info__t_8Info_8LowLevelInterfaceIndex_8____unnamed30____.html  struct____arm__2d__op__info__t_8Info_8LowLevelInterfaceIndex_8____unnamed32____.html  struct____arm__2d__op__info__t_8Info_8LowLevelInterfaceIndex_8____unnamed34____.html  struct____arm__slist__node__t.html  structarm__2d__color__accc8888__t_8____unnamed12____.html  structarm__2d__color__cccn888__t_8____unnamed14____.html  structarm__2d__color__info__t_8____unnamed18____.html  structarm__2d__color__rgb565__t_8____unnamed4____.html  structarm__2d__color__rgba8888__t_8____unnamed6____.html  structarm__2d__evt__t.html  structarm__2d__location__t.html  structarm__2d__op__core__t.html  structarm__2d__op__core__t_8____unnamed44_____8Preference.html  structarm__2d__op__evt__t.html  structarm__2d__op__src__msk__t.html  (+16 more)
v1.0.0-preview3/: annotated.html  arm__2d__draw_8h_source.html  arm__2d__op_8h_source.html  benchmark  (+26 more)
(+2291 files in other folders)
